# Process this file with automake to produce a Makefile.in

EXTRA_DIST = 		tovid_icon_128.png \
			tovid_icon_64.png \
			tovid_icon_48.png \
			tovid_icon_32.png

tovidgui_DATA =		tovid_icon_128.png \
			tovid_icon_64.png \
			tovid_icon_48.png \
			tovid_icon_32.png
tovidguidir = $(datadir)/tovidgui
